--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/simple_carbon?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://rm-2zeizy1ina321ws4k6o.mysql.rds.aliyuncs.com:3306/simple_carbon?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+spring.datasource.username=test1
+spring.datasource.password=jews2i9@djo95
 mybatis.config-location=classpath:/mybatis-config.xml
 server.port=8081
 server.tomcat.max-http-form-post-size=0
